# dotagents

./: .gitignore  Cargo.toml  README.md
public/: providers.toml
public/schemas/: config.schema.json  mcp.schema.json
public/templates/copilot/: mcp.hbs
public/templates/windsurf/: command.hbs  instructions.hbs  mcp.hbs
src/: main.rs
src/cli/: completions.rs  deploy.rs  init.rs  mod.rs  options.rs  runner.rs
src/config/: dummy.rs  mod.rs  settings.rs
src/constants/: dir.rs  features.rs  file.rs  mod.rs  resources.rs  schema.rs  variables.rs
src/core/: mod.rs
src/schema/: cache.rs  command.rs  common.rs  config.rs  instruction.rs  mcp.rs  mod.rs  provider.rs
src/schema/builder/: cache.rs  command.rs  config.rs  mcp.rs  mod.rs
src/schema/config/: app.rs  cache.rs  common.rs  global.rs  local.rs  mod.rs  traits.rs
src/templates/: helpers.rs  mod.rs
src/utils/: error.rs  fs.rs  json.rs  logs.rs  mod.rs  path.rs
